--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,91 @@
     <title>donate-project</title>
 </head>
 <body>
+    <!-- heading container -->
+    <div class="heading-container">
+        <div class="help">
+            <h1 class="help-head">Let's help those who are <br> more in need</h1>
+            <p class="help-txt">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae vel deleniti impedit laudantium odit? Repellendus minus tempora ipsa enim, a hic eaque, facere autem aut nostrum quae recusandae? Eveniet, quibusdam!
+            </p>
     
+            <button class="donate-btn">Donate Now</button>
+        </div>
+       
+    </div>
+    <!-- heading container finished-->
+
+    <!-- donate today -->
+    <div class="d-today">
+        <h2 class="donate-heading">Donate Today</h2>
+        <p class="donate-txt">Lorem ipsum dolor sit amet consectetur adipisicing laborum temporibus <br> iste accusantium ullam quam quia voluptatibus quasi necessitatibus sint? Velit.</p>
+
+        <div class="btn-div">
+            <button class="tk-btn">100</button>
+            <button class="tk-btn">200</button>
+            <button class="tk-btn">500</button>
+            <button class="tk-btn">1000</button>
+            <button class="tk-btn">5000</button>
+        </div>
+        <div class="input-div">
+            <input type="text" placeholder="Other Amount (taka)">
+        </div>
+       <div class="btn-div">
+        <button class="donate-btn">Donate Now</button>
+       </div>
+    </div>
+    <!-- donate today finished -->
+
+    <!-- plan div -->
+    <div class="plan">
+        <h2 class="donate-heading">Our Donate Plan</h2>
+        <p class="donate-txt">Lorem ipsum dolor sit amet consectetur adipisicing laborum temporibus <br> iste accusantium ullam quam quia voluptatibus quasi necessitatibus sint? Velit.</p>
+
+        <div class="carts">
+            <div class="cart1">
+            <img src="icons/shelter.png" alt="" class="food">
+            <h3 class="cart-heading">
+                Food for a family
+            </h3>
+            <p class="cart-txt">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo officia labore corporis modi. Assumenda exercitationem optio unde recusandae doloribus sit quisquam, vel obcaecati asperiores! Adipisci tenetur culpa velit possimus vel?
+            </p>
+            </div>
+            <div class="cart2">
+                <img src="icons/food.png" alt="" class="food">
+            <h3 class="cart-heading">
+                Shelter for a family
+            </h3>
+            <p class="cart-txt">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo officia labore corporis modi. Assumenda exercitationem optio unde recusandae doloribus sit quisquam, vel obcaecati asperiores! Adipisci tenetur culpa velit possimus vel?
+            </p>
+            </div>
+            <div class="cart3">
+                <img src="icons/icon4.svg" alt="" class="edu">
+            <h3 class="cart-heading">
+                Education for a child
+            </h3>
+            <p class="cart-txt">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo officia labore corporis modi. Assumenda exercitationem optio unde recusandae doloribus sit quisquam, vel obcaecati asperiores! Adipisci tenetur culpa velit possimus vel?
+            </p>
+            </div>
+        </div>
+    </div>
+    <!-- plan div finished-->
+
+    <!-- lives div -->
+    <div class="lives">
+        <div class="item">
+            <h2 class="lives-heading">Lives their depend on <br> your donation</h2>
+            <p class="lives-txt">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, facere minima autem officiis necessitatibus modi ut quae rerum magnam mollitia quod dolores fuga pariatur officia facilis aperiam, expedita veritatis. Ipsam.
+            </p>
+            <button class="contribute-btn">How to contribute?</button>
+        </div>
+        <div class="item2">
+            <img src="images/donation0.jpg" alt="" class="lives-img">
+        </div>
+    </div>
+    <!-- lives div finished-->
 </body>
 </html>
