--- a/index.htm
+++ b/index.htm
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>donate-project</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Signika:wght@600&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <!-- heading container -->
     <div class="heading-container">
         <div class="help">
             <h1 class="help-head">Let's help those who are <br> more in need</h1>
             <p class="help-txt">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae vel deleniti impedit laudantium odit? Repellendus minus tempora ipsa enim, a hic eaque, facere autem aut nostrum quae recusandae? Eveniet, quibusdam!
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae vel deleniti impedit laudantium
+                odit? Repellendus minus tempora ipsa enim, a hic eaque, facere autem aut nostrum quae recusandae?
+                Eveniet, quibusdam!
             </p>
-    
+
             <button class="donate-btn">Donate Now</button>
         </div>
-       
+
     </div>
     <!-- heading container finished-->
 
     <!-- donate today -->
     <div class="d-today">
         <h2 class="donate-heading">Donate Today</h2>
-        <p class="donate-txt">Lorem ipsum dolor sit amet consectetur adipisicing laborum temporibus <br> iste accusantium ullam quam quia voluptatibus quasi necessitatibus sint? Velit.</p>
+        <p class="donate-txt">Lorem ipsum dolor sit amet consectetur adipisicing laborum temporibus <br> iste
+            accusantium ullam quam quia voluptatibus quasi necessitatibus sint? Velit.</p>
 
         <div class="btn-div">
             <button class="tk-btn">100</button>
@@ -35,46 +43,53 @@
             <button class="tk-btn">5000</button>
         </div>
         <div class="input-div">
-            <input type="text" placeholder="Other Amount (taka)">
+            <input type="text" placeholder="Other Amount (taka)" class="tk-input">
         </div>
-       <div class="btn-div">
-        <button class="donate-btn">Donate Now</button>
-       </div>
+        <div class="btn-div">
+            <button class="donate-btn">Donate Now</button>
+        </div>
     </div>
     <!-- donate today finished -->
 
     <!-- plan div -->
     <div class="plan">
         <h2 class="donate-heading">Our Donate Plan</h2>
-        <p class="donate-txt">Lorem ipsum dolor sit amet consectetur adipisicing laborum temporibus <br> iste accusantium ullam quam quia voluptatibus quasi necessitatibus sint? Velit.</p>
+        <p class="donate-txt">Lorem ipsum dolor sit amet consectetur adipisicing laborum temporibus <br> iste
+            accusantium ullam quam quia voluptatibus quasi necessitatibus sint? Velit.</p>
 
         <div class="carts">
             <div class="cart1">
-            <img src="icons/shelter.png" alt="" class="food">
-            <h3 class="cart-heading">
-                Food for a family
-            </h3>
-            <p class="cart-txt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo officia labore corporis modi. Assumenda exercitationem optio unde recusandae doloribus sit quisquam, vel obcaecati asperiores! Adipisci tenetur culpa velit possimus vel?
-            </p>
+                <img src="icons/shelter.png" alt="" class="food">
+                <h3 class="cart-heading">
+                    Food for a family
+                </h3>
+                <p class="cart-txt">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo officia labore corporis modi. Assumenda
+                    exercitationem optio unde recusandae doloribus sit quisquam, vel obcaecati asperiores! Adipisci
+                    tenetur culpa velit possimus vel?
+                </p>
             </div>
             <div class="cart2">
                 <img src="icons/food.png" alt="" class="food">
-            <h3 class="cart-heading">
-                Shelter for a family
-            </h3>
-            <p class="cart-txt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo officia labore corporis modi. Assumenda exercitationem optio unde recusandae doloribus sit quisquam, vel obcaecati asperiores! Adipisci tenetur culpa velit possimus vel?
-            </p>
+                <h3 class="cart-heading">
+                    Shelter for a family
+                </h3>
+                <p class="cart-txt">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo officia labore corporis modi. Assumenda
+                    exercitationem optio unde recusandae doloribus sit quisquam, vel obcaecati asperiores! Adipisci
+                    tenetur culpa velit possimus vel?
+                </p>
             </div>
             <div class="cart3">
                 <img src="icons/icon4.svg" alt="" class="edu">
-            <h3 class="cart-heading">
-                Education for a child
-            </h3>
-            <p class="cart-txt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo officia labore corporis modi. Assumenda exercitationem optio unde recusandae doloribus sit quisquam, vel obcaecati asperiores! Adipisci tenetur culpa velit possimus vel?
-            </p>
+                <h3 class="cart-heading">
+                    Education for a child
+                </h3>
+                <p class="cart-txt">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo officia labore corporis modi. Assumenda
+                    exercitationem optio unde recusandae doloribus sit quisquam, vel obcaecati asperiores! Adipisci
+                    tenetur culpa velit possimus vel?
+                </p>
             </div>
         </div>
     </div>
@@ -85,7 +100,9 @@
         <div class="item">
             <h2 class="lives-heading">Lives their depend on <br> your donation</h2>
             <p class="lives-txt">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, facere minima autem officiis necessitatibus modi ut quae rerum magnam mollitia quod dolores fuga pariatur officia facilis aperiam, expedita veritatis. Ipsam.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, facere minima autem officiis
+                necessitatibus modi ut quae rerum magnam mollitia quod dolores fuga pariatur officia facilis aperiam,
+                expedita veritatis. Ipsam.
             </p>
             <button class="contribute-btn">How to contribute?</button>
         </div>
@@ -94,5 +111,50 @@
         </div>
     </div>
     <!-- lives div finished-->
+
+    <!-- survive div -->
+    <div class="lives">
+
+        <div class="item2">
+            <img src="images/donation1.jpg" alt="" class="lives-img">
+        </div>
+
+        <div class="item">
+            <h2 class="lives-heading">They need us <br>to survive</h2>
+            <p class="lives-txt">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, facere minima autem officiis
+                necessitatibus modi ut quae rerum magnam mollitia quod dolores fuga pariatur officia facilis aperiam,
+                expedita veritatis. Ipsam.
+            </p>
+            <button class="contribute-btn">How to contribute?</button>
+        </div>
+    </div>
+    <!-- survive div finished -->
+
+    <!-- contact div -->
+    <div class="contact">
+        <div class="heading">
+            <h2 class="update">Get My Updates</h2>
+            <p class="contact-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt voluptate omnis totam
+                distinctio maiores, <br> reiciendis ipsam accusamus animi rerum ex consequuntur magnam officia corrupti
+                nulla
+            </p>
+        </div>
+        <div class="email">
+            <input type="email" class="email-input" placeholder="Enter Your Email">
+            <button class="subscribe-btn">Subscribe</button>
+        </div>
+    </div>
+    <!-- contact div finished -->
+
+    <!-- footer div -->
+    <footer>
+        <div class="footer-content">
+            <h2 class="humble">Be humble</h2>
+            <p>I am gonna do it</p>
+        </div>
+    </footer>
+    <!-- footer div finished -->
 </body>
+
 </html>
